examples/valid/getMax.ctds
Program {
    int getMax(int x, int y) {
        if (x > y) then {
            return x;
        } else {
            return y;
        }
    }

    int a = getMax(6, 9);
}
