examples/invalid/sumatory.ctds
Program {
    int sumatory(int x) {
        int i = 0;
        int result = 0;
        while (i < x || i == x) {
            result = result + i;
            i = i + 1;
        }
        return result;
    }

    int a = sumatory(20*3);
}
